--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
+*{
   text-align: center;
+  font-family: "Poppins", sans-serif;   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* *****header****** */
+.header{
+  text-align: center;
+  background-image: linear-gradient(to right, rgb(3, 15, 35) , rgb(13, 52, 114));
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header h1{
+  font-family: "Poppins", sans-serif;
+  font-weight: 300; 
+  font-size: xx-large;
+  color: rgb(216, 225, 235);
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header h3{
+  font-family: "Poppins", sans-serif;
+  font-weight: 300; 
+  color: rgb(220, 232, 192);
+  margin: 0;
+}
+
+/* *******flex div*********** */
+
+.flex-container {
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  justify-content: space-around;    
+  background-image: linear-gradient(to right, rgb(3, 15, 35) , rgb(13, 52, 114));
+  height: 100vh;  
 }
 
-.App-link {
-  color: #61dafb;
+/* ****** data container & boxes***** */
+
+.data-container{
+  border: none;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 20px;
+  width: 20%;
+  background-color: transparent;
+  position: relative;
+  bottom: 50px;
+  left: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.coin-box{
+  border: rgb(4, 34, 60) solid 1px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  font-size: small;
+  line-height: 5px;
+  background-color:transparent;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  color: rgb(206, 214, 224);
+  background-color: rgb(4, 34, 60);
+  transition: 0.6s;
+  opacity: 1;
+
+  &:hover{
+    background-color: rgb(167, 209, 245);
+    color: black;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+/* ***chart & filter */
+
+.mixed-chart{
+  border: none;
+  margin: 10px;
+  background-color: transparent;
+  opacity: 1;
+  padding: 2.5px;
+  position: relative;
+  top: 15px;
+  right: 40px;
+}
+
+.filter-container{
+  text-align: start;
+  color: aliceblue;
+  font-size: x-small;
+  position: relative;
+  left: 110px;
+}
+
+.filter-container p{
+  text-align: start;
+  font-weight: 4s00;
+}
+
+.filter-container label{
+  position: relative;
+  left: 10px;
+  bottom: 3px;
+}
+
+.rangeInput{
+  width: 70%;
+  height: 10px;
+  border-radius: 5px;
+  outline: none;
+  opacity: 0.5;
 }
